# Mandelbrot

./: .gitignore  CMakeLists.txt  LICENSE  Mandelbrot.sln  README.md
Mandelbrot/: Mandelbrot.vcxproj  Mandelbrot.vcxproj.filters
Mandelbrot/source/Mandelbrot/: Button.hpp  Config.hpp  Main.cpp  MandebrotPoint.hpp  MandelbrotGui.cpp  MandelbrotGui.hpp  MandelbrotUtils.cpp  MandelbrotUtils.hpp
cmake/: Conan.cmake
include/: Logger.hpp  Timer.hpp
source/: CMakeLists.txt
